--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>selkie</finalName>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
@@ -123,11 +124,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <image>
-                        <name>josefilipeii/${project.artifactId}:${project.version}</name>
-                    </image>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
