--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Selkie release
 
 on:
@@ -9,8 +6,15 @@ on:
 
 jobs:
   build-image:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/build-docker-image.yml
     permissions:
       contents: read
       packages: write
-
+    with:
+      artifact-name: selkie
+      artifact-version: ${{ github.event.release.tag_name }}
+      artifact-repo: josefilipeii
+      push_docker: true
+    secrets:
+      docker-hub-user: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker-hub-secret: ${{ secrets.DOCKERHUB_PASSWORD }}
